--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title></title> <!-- ADD A TITLE! -->
+  <title>SVG IB</title>
 
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<h5>hello world</h5>
+
+  <div id="insert-svg"></div>
 
 
   <script src="js/vendor/jquery-2.1.1.min.js"></script>
